--- a/SVG/Svg.html
+++ b/SVG/Svg.html
@@ -12,7 +12,7 @@
 <!-- Thunder -->
 
 
-<!-- Rain -->
+<!-- Rain --><!-- Split it in illustrator-->
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 23.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -37,7 +37,7 @@
 <path class="st0" d="M132.77,191.69L132.77,191.69c-1.55-0.56-2.36-2.29-1.79-3.85l8.55-23.49c0.56-1.55,2.29-2.36,3.85-1.79l0,0
 	c1.55,0.56,2.36,2.29,1.79,3.85l-8.55,23.49C136.05,191.45,134.32,192.26,132.77,191.69z"/>
 </svg>
-<!-- Snow -->
+<!-- Snow - Add the flakes under the cloud and make them drop like that -->
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 23.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -60,29 +60,7 @@
 </g>
 </svg>
 <!-- Fog -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 23.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 198.43 226.77" style="enable-background:new 0 0 198.43 226.77;" xml:space="preserve">
-<style type="text/css">
-	.st0{fill:#898480;}
-	.st1{fill:#FFFFFF;stroke:#000000;stroke-miterlimit:10;}
-</style>
-<g>
-	<path class="st0" d="M142.2,69.94c0-0.19,0.01-0.39,0.01-0.58c0-22.92-18.58-41.5-41.5-41.5s-41.5,18.58-41.5,41.5
-		c0,0.17,0.01,0.34,0.01,0.51c-0.17,0-0.34-0.01-0.51-0.01c-22.92,0-41.5,18.58-41.5,41.5c0,21.05,15.68,38.43,36,41.13v0.17h1.44
-		c1.33,0.13,2.69,0.2,4.06,0.2s2.72-0.07,4.06-0.2h72.44v-0.05c1.48,0.16,2.98,0.25,4.5,0.25c22.92,0,41.5-18.58,41.5-41.5
-		C181.21,89.27,163.96,71.23,142.2,69.94z"/>
-	<g>
-		<path class="st1" d="M156.21,168.8h-114c-2.2,0-4-1.8-4-4l0,0c0-2.2,1.8-4,4-4h114c2.2,0,4,1.8,4,4l0,0
-			C160.21,167,158.41,168.8,156.21,168.8z"/>
-		<path class="st1" d="M156.21,198.91h-114c-2.2,0-4-1.8-4-4v0c0-2.2,1.8-4,4-4h114c2.2,0,4,1.8,4,4v0
-			C160.21,197.11,158.41,198.91,156.21,198.91z"/>
-		<path class="st1" d="M156.21,183.86h-114c-2.2,0-4-1.8-4-4v0c0-2.2,1.8-4,4-4h114c2.2,0,4,1.8,4,4v0
-			C160.21,182.06,158.41,183.86,156.21,183.86z"/>
-	</g>
-</g>
-</svg>
+
 <!-- Sunny -->
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 23.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -94,25 +72,7 @@
 <circle class="st0" cx="99.21" cy="99.21" r="75"/>
 </svg>
 <!-- Cloudy -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 23.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 226.77 198.43" style="enable-background:new 0 0 226.77 198.43;" xml:space="preserve">
-<style type="text/css">
-	.st0{fill:#B3B3B4;}
-	.st1{fill:#79736E;}
-</style>
-<g>
-	<path class="st0" d="M171.21,44.25c0-0.19,0.01-0.39,0.01-0.58c0-22.92-18.58-41.5-41.5-41.5s-41.5,18.58-41.5,41.5
-		c0,0.17,0.01,0.34,0.01,0.51c-0.17,0-0.34-0.01-0.51-0.01c-22.92,0-41.5,18.58-41.5,41.5c0,21.05,15.68,38.43,36,41.13v0.17h1.44
-		c1.33,0.13,2.69,0.2,4.06,0.2s2.72-0.07,4.06-0.2h72.44v-0.05c1.48,0.16,2.98,0.25,4.5,0.25c22.92,0,41.5-18.58,41.5-41.5
-		C210.22,63.58,192.97,45.53,171.21,44.25z"/>
-	<path class="st1" d="M141.26,101.05c0-0.19,0.01-0.39,0.01-0.58c0-22.92-18.58-41.5-41.5-41.5s-41.5,18.58-41.5,41.5
-		c0,0.17,0.01,0.34,0.01,0.51c-0.17,0-0.34-0.01-0.51-0.01c-22.92,0-41.5,18.58-41.5,41.5c0,21.05,15.68,38.43,36,41.13v0.17h1.44
-		c1.33,0.13,2.69,0.2,4.06,0.2s2.72-0.07,4.06-0.2h72.44v-0.05c1.48,0.16,2.98,0.25,4.5,0.25c22.92,0,41.5-18.58,41.5-41.5
-		C180.28,120.38,163.02,102.33,141.26,101.05z"/>
-</g>
-</svg>
+
 
 	
 </body>
