--- a/FunctionTesting.html
+++ b/FunctionTesting.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/new.css">
-    <?xml version="1.0" encoding="utf-8"?>
     <title>Document</title>
 </head>
-
 <body>
-    <div id="wrapper">
+    
+    <section id="Output">
 
-    </div>
-    <script src="js.js"></script>
+    </section>
+
 </body>
+<script src="FunctionTesting.js"></script>
 </html>
